--- a/SuperEconomicoApp/Views/ProductsView.xaml
+++ b/SuperEconomicoApp/Views/ProductsView.xaml
@@ -201,25 +201,21 @@
                      Margin="20,20,20,10">
                 <sombras:Shadows CornerRadius="10"
                              Shades="{sombras:SingleShade Offset='0,0' ,Opacity=0.6,Color=White}">
-                    <Image Source="t1.png" />
+                    <Image Source="home.png" />
                 </sombras:Shadows>
                 <sombras:Shadows CornerRadius="10"
                              Shades="{sombras:SingleShade Offset='0,0' ,Opacity=0.6,Color=White}"
                              HorizontalOptions="CenterAndExpand">
-                    <Image Source="direction_menu.png">
+                    <Image Source="gps.png">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding ViewDirectionCommand}"/>
                         </Image.GestureRecognizers>
                     </Image>
                 </sombras:Shadows>
-                <sombras:Shadows CornerRadius="10"
-                             Shades="{sombras:SingleShade Offset='0,0' ,Opacity=0.6,Color=White}"
-                             HorizontalOptions="CenterAndExpand">
-                    <Image Source="catalogo.png" />
-                </sombras:Shadows>
+               
                 <sombras:Shadows CornerRadius="10"
                              Shades="{sombras:SingleShade Offset='0,0' ,Opacity=0.6,Color=White}">
-                    <Image Source="usuario.png" />
+                    <Image Source="usuarioBlack.png" />
                 </sombras:Shadows>
             </StackLayout>
         </StackLayout>
