--- a/SuperEconomicoApp/Views/ProductsView.xaml
+++ b/SuperEconomicoApp/Views/ProductsView.xaml
@@ -215,7 +215,11 @@
                
                 <sombras:Shadows CornerRadius="10"
                              Shades="{sombras:SingleShade Offset='0,0' ,Opacity=0.6,Color=White}">
-                    <Image Source="usuarioBlack.png" />
+                    <Image Source="usuarioBlack.png" >
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding EditUserCommand}"/>
+                        </Image.GestureRecognizers>
+                    </Image>
                 </sombras:Shadows>
             </StackLayout>
         </StackLayout>
