--- a/SuperEconomicoApp/Views/SendRecoveryPass.xaml
+++ b/SuperEconomicoApp/Views/SendRecoveryPass.xaml
@@ -1,13 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SuperEconomicoApp.Views.SendRecoveryPass">
+             x:Class="SuperEconomicoApp.Views.SendRecoveryPass"
+             xmlns:controls="clr-namespace:SuperEconomicoApp.Controls;assembly=SuperEconomicoApp">
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand">
             <Label Text="Recuperar contraseña" FontSize="Title" HorizontalTextAlignment="Center"/>
-            <Label Text="Ingresa tu correo electrónico y te enviaremos las instrucciones para actualizar tu contraseña." FontSize="16" Margin="15,0,15,0"/>
-            <Entry Margin="15,0,15,0" Placeholder="Ingrese su correo electronico" Keyboard="Email" x:Name="RecoveryEmail"/>
-            <Button Text="Enviar"  Margin="50,0,50,0" x:Name="btnSendCodigo" Clicked="btnSendCodigo_Clicked"/>
+            <Label Text="Ingresa tu correo electrónico y te enviaremos las instrucciones para actualizar tu contraseña." FontSize="16" Margin="20,0,20,0"/>
+            <controls:StandardEntry
+            Grid.Row="2"
+            Padding="13"
+             BackgroundColor="White"
+            BorderThickness="1"
+            TextColor="Black"
+            CornerRadius="20"
+            Placeholder="Ingrese su correo electronico"
+            x:Name="RecoveryEmail"
+            Keyboard="Email" 
+            FontSize="Default"
+                PlaceholderColor="Black" 
+            Margin="20,10,20,0"
+            />
+            <Button Text="Enviar" CornerRadius="8"  BackgroundColor="#8873b6" TextColor="White" Margin="150,10,20,0" x:Name="btnSendCodigo" Clicked="btnSendCodigo_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
