--- a/SuperEconomicoApp/Views/EditUserViews.xaml
+++ b/SuperEconomicoApp/Views/EditUserViews.xaml
@@ -49,7 +49,6 @@
             x:Name="txtname"
             Keyboard="Text"
             FontSize="Small"
-                PlaceholderColor="Black" 
             />
 
         <Label Text="APELLIDOS" Margin="0,0,0,-7" TextColor="#8873b6" Grid.Row="3"/>
@@ -59,7 +58,6 @@
              BackgroundColor="White"
             TextColor="Black"
             FontSize="Small"
-                PlaceholderColor="Black" 
             BorderThickness="1"
             CornerRadius="20"
             Placeholder="Aguirre Lainez" 
@@ -77,7 +75,6 @@
             Placeholder="33552513" 
              x:Name="txtphone"
              Keyboard="Telephone"
-                PlaceholderColor="Black"
             FontSize="Small"
             />
         <Label Text="CORREO ELECTRONICO" Margin="0,0,0,-7" TextColor="#8873b6" Grid.Row="7"/>
@@ -91,18 +88,13 @@
             Placeholder="sinle.lainez@gmail.com" 
             x:Name="txtemail"
             Keyboard="Email"
-                PlaceholderColor="Black" 
             FontSize="Small"
             />
         <Label Text="FECHA DE NACIMIENTO" Margin="0,0,0,-7" TextColor="#8873b6" Grid.Row="9"/>
         <Frame Grid.Row="10" Padding="13,0,13,0" CornerRadius="20">
-            <DatePicker MinimumDate="01/01/1900"  BackgroundColor="white"  x:Name="txtbirthdate" FontSize="Small" />
+            <DatePicker MinimumDate="01/01/1900" TextColor="#B4bB4B4" BackgroundColor="white"  x:Name="txtbirthdate" FontSize="Small" />
 
         </Frame>
-
-
-
-
 
         <Label Text="PASSWORD" Margin="0,0,0,-7" TextColor="#8873b6" Grid.Row="11"/>
 
@@ -113,7 +105,6 @@
             TextColor="Black"
             BorderThickness="1"
             CornerRadius="20"
-            PlaceholderColor="Black" 
             FontSize="Small"
             Placeholder="Ingresa tu password"  
             x:Name="txtpassword"
@@ -126,7 +117,6 @@
             Padding="13"
              BackgroundColor="White"
             TextColor="Black"
-            PlaceholderColor="Black"
             FontSize="Small"
             BorderThickness="1"
             CornerRadius="20"
