--- a/SuperEconomicoApp/Views/AccountUserView.xaml
+++ b/SuperEconomicoApp/Views/AccountUserView.xaml
@@ -4,92 +4,104 @@
              x:Class="SuperEconomicoApp.Views.AccountUserView"
               xmlns:pancake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+             xmlns:converter="clr-namespace:SuperEconomicoApp.Converters"
              BackgroundColor="White">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converter:ByteArrayToImage x:Key="ByteToImage" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <ContentPage.Content>
 
+        <StackLayout>
+            <Frame 
+                    HasShadow="False" 
+                    BackgroundColor="White" 
+                    HeightRequest="150"
+                    CornerRadius="20" 
+                    Margin="0,10"
+                    Padding="20,20,0,0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
 
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
 
-                            <StackLayout>
-                                <Frame 
-                            HasShadow="False" 
-                            BackgroundColor="White" 
-                            HeightRequest="90"
-                            CornerRadius="20" 
-                            Margin="0,10"
-                            Padding="20,20,0,0">
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto"/>
-                                            <ColumnDefinition Width="Auto"/>
-                                            <ColumnDefinition Width="*"/>
-                                            <ColumnDefinition Width="Auto"/>
-                        
-                                        </Grid.ColumnDefinitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="*" />
-                                            <RowDefinition Height="*" />
-                                            <RowDefinition Height="*" />
-                                            <RowDefinition Height="*" />
-                       
-                                        </Grid.RowDefinitions>
-                                        <pancake:PancakeView 
-                                        Grid.Column="0" 
-                                        Grid.Row="0" Grid.RowSpan="3"
-                                        CornerRadius="12"
-                                        Margin="0,0,10,0">
-                                            <controls:CircleImage 
-                                                Source="person2"/>
+                    </Grid.RowDefinitions>
+                    <pancake:PancakeView 
+                                Grid.Column="0" 
+                                Grid.Row="0" Grid.RowSpan="3"
+                                CornerRadius="12"
+                                Margin="0,0,10,0">
+                        <StackLayout>
+                            <controls:CircleImage Source="person2" IsVisible="{Binding IsImageDefault}"/>
+                            <controls:CircleImage 
+                                Source="{Binding Image,  Converter={StaticResource ByteToImage}}"
+                                IsVisible="{Binding IsImageBD}"
+                                HeightRequest="70"
+                                WidthRequest="70"/>
+                        </StackLayout>
 
-                                        </pancake:PancakeView>
-                                        
-                                        <Label  Grid.Row="0"
-                                        Grid.Column="1" 
-                                        Text="Nombre: " 
-                                        FontSize="Subtitle"
-                                        TextColor="#8873b6"/>
-                                        
-                                        <Label 
-                                        Grid.Row="0"
-                                        Grid.Column="2"
-                                        Grid.ColumnSpan="2"
-                                        Text="Levin Mauricio"
-                                        FontSize="15"
-                                        FontAttributes="Bold"
-                                        TextColor="#a4a7b6"/>
-                                        
-                                        <Label  Grid.Row="1"
-                                        Grid.Column="1" 
-                                        Text="Apellido: " 
-                                        FontSize="Subtitle"
-                                        TextColor="#8873b6"/>
-                                        
-                                        <Label 
-                                        Grid.Row="1"
-                                        Grid.Column="2"
-                                        Grid.ColumnSpan="2"
-                                        Text="Lainez Aguirre" 
-                                        FontSize="15"
-                                        TextColor="#a4a7b6"/>
-                                        
-                                        <Label  Grid.Row="2"
-                                        Grid.Column="1" 
-                                        Text="Correo: " 
-                                        FontSize="Subtitle"
-                                        TextColor="#8873b6"/>
+                    </pancake:PancakeView>
 
-                                        <Label 
-                                        Grid.Row="2"
-                                        Grid.Column="2"
-                                        Grid.ColumnSpan="2"
-                                        Text="sinle.lainez@gmail.com" 
-                                        FontSize="15"
-                                        TextColor="#a4a7b6"
-                                        FontAttributes="Bold"/>
-                                        
-                                    </Grid>
-                                </Frame>
-                            <Button 
+                    <Label  Grid.Row="0"
+                            Grid.Column="1" 
+                            Text="Nombre: " 
+                            FontSize="Subtitle"
+                            TextColor="#8873b6"
+                            FontAttributes="Bold"/>
+
+                    <Label 
+                            Grid.Row="0"
+                            Grid.Column="2"
+                            Grid.ColumnSpan="2"
+                            Text="{Binding Name}"
+                            FontSize="15"
+                            TextColor="#a4a7b6"/>
+
+                    <Label  Grid.Row="1"
+                            Grid.Column="1" 
+                            Text="Apellido: " 
+                            FontSize="Subtitle"
+                            TextColor="#8873b6"
+                            FontAttributes="Bold"/>
+
+                    <Label 
+                            Grid.Row="1"
+                            Grid.Column="2"
+                            Grid.ColumnSpan="2"
+                            Text="{Binding Lastname}" 
+                            FontSize="15"
+                            TextColor="#a4a7b6"/>
+
+                    <Label  Grid.Row="2"
+                            Grid.Column="1" 
+                            Text="Correo: "
+                            FontAttributes="Bold"
+                            FontSize="Subtitle"
+                            TextColor="#8873b6"/>
+
+                    <Label 
+                            Grid.Row="2"
+                            Grid.Column="2"
+                            Grid.ColumnSpan="2"
+                            Text="{Binding Email}" 
+                            FontSize="15"
+                            TextColor="#a4a7b6"/>
+
+                </Grid>
+            </Frame>
+            <Button 
                             Text="ACTUALIZAR PERFIL" 
                             BackgroundColor="#8873b6" 
                             TextColor="White" 
@@ -117,10 +129,10 @@
                             x:Name="btnExit"
                             Command="{Binding LogoutCommand}"
                             CornerRadius="20"/>
-                 
+
                 </StackLayout>
             </Frame>
         </StackLayout>
-               
+
     </ContentPage.Content>
 </ContentPage>
